Fixed footer/call to action bug on mobile
Fixed bug by adding a margin-bottom to the container.

--- a/styles.css
+++ b/styles.css
@@ -411,4 +411,8 @@ textarea {
       #submit {
           width: 100%;
       }
+
+      .home-container{
+          margin-bottom: 20%;
+      }
   }
